MOW-622 handle the case when iframe is inserted; CSS fix for iframe out of bounding box
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@64300 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -854,6 +854,11 @@
 		position: absolute;
 		border-style: none;
 		z-index: $z_mow_video;
+		.gwt-Frame{
+			box-sizing: border-box;
+			width: 100%;
+			height: 100%;
+		}
 	}
 
 	.mowWidget.background {
